tests/reference/asr-implicit_typing1-7a0ea7d.stderr
semantic error: Variable 'l' is not declared
 --> tests/implicit_typing1.f90:2:1
  |
2 | L = 3
  | ^ 'l' is undeclared
